argocd/qa/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: argocd-ingress
  namespace: argocd
spec:
  rules:
  - host: argocd.ws.sh4ke.rocks
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - argocd.ws.sh4ke.rocks
    secretName: argocd-ws-sh4ke-rocks-tls
